fix dark mode and a11y

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,4 +28,12 @@
     html.dark body {
         background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2) 1px, transparent 1px), linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
     }
+
+    .main-footer {
+        background-size: 5px 5px;
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.2) 1px, transparent 1px), linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 1px, transparent 1px);
+    }
+    html.dark .main-footer {
+        background-image: linear-gradient(to right, rgba(0, 0, 0, 0.05) 1px, transparent 1px), linear-gradient(to bottom, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
+    }
 }
